bugfix: the spacing between link and icon in sidebar and in markdown is not consistent

--- a/docs/.vuepress/styles/sidebar.styl
+++ b/docs/.vuepress/styles/sidebar.styl
@@ -28,3 +28,6 @@
 
         &:not(.clickable)
             opacity 0.9
+
+.sidebar-link svg
+  margin-left: 0.25rem
